# vocab-nlp

./: .gitattributes  .gitignore  CLAUDE.md  PRD-phrases.md  PRD.md  README.md  THIRD_PARTY_LICENSES  TODO.md  app.py  cli.py  gradio_app.py  pipeline.py  pyproject.toml  requirements.txt  todo.md
.claude/: settings.local.json
bench/: BRIEF.md  run.py
bench/baseline/: en_a0_01.json  en_a0_02.json  en_a0_03.json  en_a0_04.json  en_a0_05.json  en_a0_06.json  en_a0_07.json  en_a0_08.json  en_a0_09.json  en_a0_10.json  en_a1_01.json  en_a1_02.json  en_a1_03.json  en_a1_04.json  en_a1_05.json  en_a1_06.json  en_a1_07.json  en_a1_08.json  en_a1_09.json  en_a1_10.json  en_a2_01.json  en_a2_02.json  en_a2_03.json  en_a2_04.json  en_a2_05.json  en_a2_06.json  en_a2_07.json  en_a2_08.json  en_a2_09.json  en_a2_10.json  nl_a0_01.json  nl_a0_02.json  nl_a0_03.json  nl_a0_04.json  nl_a0_05.json  nl_a0_06.json  nl_a0_07.json  nl_a0_08.json  nl_a0_09.json  nl_a0_10.json  (+50 more)
bench/texts/: en_a0_01.txt  en_a0_02.txt  en_a0_03.txt  en_a0_04.txt  en_a0_05.txt  en_a0_06.txt  en_a0_07.txt  en_a0_08.txt  en_a0_09.txt  en_a0_10.txt  en_a1_01.txt  en_a1_02.txt  en_a1_03.txt  en_a1_04.txt  en_a1_05.txt  en_a1_06.txt  en_a1_07.txt  en_a1_08.txt  en_a1_09.txt  en_a1_10.txt  en_a2_01.txt  en_a2_02.txt  en_a2_03.txt  en_a2_04.txt  en_a2_05.txt  en_a2_06.txt  en_a2_07.txt  en_a2_08.txt  (+62 more)
corpus/: README.md
data/: collocations_en.json  collocations_nl.json  collocations_sr_raw.json  en_freq.csv  nl.csv  nl_lemmas.tsv  sr_freq.csv  sr_lemmas.tsv
scripts/: build_collocations.py  build_lemma_dict.py
(+3 files in other folders)
