[project]
name = "vocab-nlp"
version = "0.1.0"
description = "Multilingual NLP microservice that extracts vocabulary candidates from short texts for language learning apps"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "modal>=1.3.5",
    "rich>=14.3.3",
    "stanza>=1.11.1",
    "textual>=8.1.1",
]

[dependency-groups]
bench = [
    "openai>=2.28.0",
    "python-dotenv>=1.2.2",
]
